--- a/baseline_model.ipynb
+++ b/baseline_model.ipynb
@@ -217,7 +217,87 @@
    ],
    "source": [
     "mean_absolute_error(y_test, predicted_time) \n",
-    "# first naive try MAE score for 2P recipes -- 0.8375554028815221"
+    "# first naive try MAE score for 2P recipes -- 0.8375554028815221 (min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "       Pickers Count  Time Consumption    E    H    M   VE   VH  \\\n0                3.0              6.00  3.0  0.0  3.0  2.0  0.0   \n1                3.0              6.00  3.0  0.0  3.0  2.0  0.0   \n2                3.0              5.00  3.0  0.0  3.0  2.0  0.0   \n3                3.0              4.00  3.0  0.0  3.0  2.0  0.0   \n4                3.0              5.00  3.0  0.0  3.0  2.0  0.0   \n...              ...               ...  ...  ...  ...  ...  ...   \n14910            3.0              4.48  3.0  2.0  1.0  3.0  1.0   \n14911            3.0              5.42  3.0  2.0  1.0  3.0  1.0   \n14912            3.0              4.83  3.0  2.0  1.0  3.0  1.0   \n14913            3.0              5.33  3.0  2.0  1.0  3.0  1.0   \n14914            3.0              4.60  3.0  2.0  1.0  3.0  1.0   \n\n       Meal Kits/Crate  \n0                  5.0  \n1                  5.0  \n2                  5.0  \n3                  5.0  \n4                  5.0  \n...                ...  \n14910              4.0  \n14911              4.0  \n14912              4.0  \n14913              4.0  \n14914              4.0  \n\n[14915 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Pickers Count</th>\n      <th>Time Consumption</th>\n      <th>E</th>\n      <th>H</th>\n      <th>M</th>\n      <th>VE</th>\n      <th>VH</th>\n      <th>Meal Kits/Crate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>3.0</td>\n      <td>6.00</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>3.0</td>\n      <td>6.00</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>3.0</td>\n      <td>5.00</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>3.0</td>\n      <td>4.00</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>3.0</td>\n      <td>5.00</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>14910</td>\n      <td>3.0</td>\n      <td>4.48</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <td>14911</td>\n      <td>3.0</td>\n      <td>5.42</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <td>14912</td>\n      <td>3.0</td>\n      <td>4.83</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <td>14913</td>\n      <td>3.0</td>\n      <td>5.33</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <td>14914</td>\n      <td>3.0</td>\n      <td>4.60</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>14915 rows × 8 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "       Pickers Count    E    H    M   VE   VH  Meal Kits/Crate        mk/h\n0                3.0  3.0  0.0  3.0  2.0  0.0              5.0  350.000000\n1                3.0  3.0  0.0  3.0  2.0  0.0              5.0  350.000000\n2                3.0  3.0  0.0  3.0  2.0  0.0              5.0  420.000000\n3                3.0  3.0  0.0  3.0  2.0  0.0              5.0  525.000000\n4                3.0  3.0  0.0  3.0  2.0  0.0              5.0  420.000000\n...              ...  ...  ...  ...  ...  ...              ...         ...\n14910            3.0  3.0  2.0  1.0  3.0  1.0              4.0  375.000000\n14911            3.0  3.0  2.0  1.0  3.0  1.0              4.0  309.963100\n14912            3.0  3.0  2.0  1.0  3.0  1.0              4.0  347.826087\n14913            3.0  3.0  2.0  1.0  3.0  1.0              4.0  315.196998\n14914            3.0  3.0  2.0  1.0  3.0  1.0              4.0  365.217391\n\n[14915 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Pickers Count</th>\n      <th>E</th>\n      <th>H</th>\n      <th>M</th>\n      <th>VE</th>\n      <th>VH</th>\n      <th>Meal Kits/Crate</th>\n      <th>mk/h</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>350.000000</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>350.000000</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>420.000000</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>525.000000</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>420.000000</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>14910</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>375.000000</td>\n    </tr>\n    <tr>\n      <td>14911</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>309.963100</td>\n    </tr>\n    <tr>\n      <td>14912</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>347.826087</td>\n    </tr>\n    <tr>\n      <td>14913</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>315.196998</td>\n    </tr>\n    <tr>\n      <td>14914</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>365.217391</td>\n    </tr>\n  </tbody>\n</table>\n<p>14915 rows × 8 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "# use the speed (mk/hour) instead of the time (Time Consumption)\n",
+    "train_2P['mk/h'] = train_2P['Meal Kits/Crate'] * 7 * 60 / train_2P['Time Consumption']\n",
+    "train_2P.drop(columns = ['Time Consumption'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n                      max_depth=None, max_features='auto', max_leaf_nodes=None,\n                      max_samples=None, min_impurity_decrease=0.0,\n                      min_impurity_split=None, min_samples_leaf=1,\n                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n                      n_estimators=50, n_jobs=None, oob_score=False,\n                      random_state=0, verbose=0, warm_start=False)"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "X = train_2P[['Pickers Count', 'E', 'H', 'M', 'VE', 'VH', 'Meal Kits/Crate']]\n",
+    "y = train_2P['mk/h']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)\n",
+    "my_forest = RandomForestRegressor(n_estimators = 50, random_state = 0)\n",
+    "my_forest.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "93.1241887108631"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "predicted_speed = my_forest.predict(X_test)\n",
+    "mean_absolute_error(y_test, predicted_speed) \n",
+    "# first naive try MAE score for 2P recipes -- 93.1241887108631 (mk/h)"
    ]
   },
   {
@@ -225,7 +305,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "naive_forest = \n",
+    "//"
+   ]
   }
  ],
  "metadata": {
