my_forest: Average Error: 93.1242 degrees. Accuracy = 80.25%.

--- a/baseline_model.ipynb
+++ b/baseline_model.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Pickers Count</th>\n      <th>E</th>\n      <th>H</th>\n      <th>M</th>\n      <th>VE</th>\n      <th>VH</th>\n      <th>Meal Kits/Crate</th>\n      <th>mk/h</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>350.000000</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>350.000000</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>420.000000</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>525.000000</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>420.000000</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>14910</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>375.000000</td>\n    </tr>\n    <tr>\n      <td>14911</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>309.963100</td>\n    </tr>\n    <tr>\n      <td>14912</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>347.826087</td>\n    </tr>\n    <tr>\n      <td>14913</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>315.196998</td>\n    </tr>\n    <tr>\n      <td>14914</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>365.217391</td>\n    </tr>\n  </tbody>\n</table>\n<p>14915 rows × 8 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 15
     }
    ],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
       "text/plain": "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n                      max_depth=None, max_features='auto', max_leaf_nodes=None,\n                      max_samples=None, min_impurity_decrease=0.0,\n                      min_impurity_split=None, min_samples_leaf=1,\n                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n                      n_estimators=50, n_jobs=None, oob_score=False,\n                      random_state=0, verbose=0, warm_start=False)"
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 16
     }
    ],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
       "text/plain": "93.1241887108631"
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 17
     }
    ],
    "source": [
@@ -302,14 +302,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "naive_forest = \n",
-    "//"
+    "# from sklearn.model_selection import RandomizedSearchCV\n",
+    "# # Number of trees in random forest\n",
+    "# n_estimators = [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)]\n",
+    "# # Number of features to consider at every split\n",
+    "# max_features = ['auto', 'sqrt']\n",
+    "# # Maximum number of levels in tree\n",
+    "# max_depth = [int(x) for x in np.linspace(10, 110, num = 11)]\n",
+    "# max_depth.append(None)\n",
+    "# # Minimum number of samples required to split a node\n",
+    "# min_samples_split = [2, 5, 10]\n",
+    "# # Minimum number of samples required at each leaf node\n",
+    "# min_samples_leaf = [1, 2, 4]\n",
+    "# # Method of selecting samples for training each tree\n",
+    "# bootstrap = [True, False]\n",
+    "# # Create the random grid\n",
+    "# random_grid = {'n_estimators': n_estimators,\n",
+    "#                'max_features': max_features,\n",
+    "#                'max_depth': max_depth,\n",
+    "#                'min_samples_split': min_samples_split,\n",
+    "#                'min_samples_leaf': min_samples_leaf,\n",
+    "#                'bootstrap': bootstrap}\n",
+    "# print(random_grid)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# naive_forest = RandomForestRegressor()\n",
+    "# RFR_rd = RandomizedSearchCV(estimator = naive_forest, param_distributions = random_grid, n_iter = 10, cv = 5, verbose = 2, random_state = 42, n_jobs = -1)\n",
+    "# RFR_rd.fit(X_train,y_train)\n",
+    "# RFR_rd.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optimized_model = RandomForestRegressor(n_estimators = 2000, min_samples_split = 5, min_samples_leaf = 2, max_features = 'auto', max_depth = 50, bootstrap = True)\n",
+    "# optimized_model.fit(X_train, y_train)\n",
+    "# optimized_predicted_speed = optimized_model.predict(X_test)\n",
+    "# mean_absolute_error(y_test, optimized_predicted_speed) \n",
+    "# # Optimized MAE score: 93.14699628993233"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def EvaluatingFunction(model, test_features, test_labels):\n",
+    "    predictions = model.predict(test_features)\n",
+    "    errors = abs(predictions - test_labels)\n",
+    "    mape = 100 * np.mean(errors / test_labels)\n",
+    "    accuracy = 100 - mape\n",
+    "    print('Model Performance')\n",
+    "    print('Average Error: {:0.4f} degrees.'.format(np.mean(errors)))\n",
+    "    print('Accuracy = {:0.2f}%.'.format(accuracy))\n",
+    "    \n",
+    "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Model Performance\nAverage Error: 93.1242 degrees.\nAccuracy = 80.25%.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "80.25398725146812"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "EvaluatingFunction(my_forest, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
