W24 data for validation -- continued on Kaggle

--- a/preprocessing_raw_data(Week24).ipynb
+++ b/preprocessing_raw_data(Week24).ipynb
@@ -356,12 +356,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "     Recipe Name     Week  Pickers Count  Time Consumption Recipe Code   P  E  \\\n0             D4  2020-24              2              4.53        24D4  4P  0   \n1             D4  2020-24              2              4.17        24D4  4P  0   \n2             D4  2020-24              2              7.33        24D4  4P  0   \n3             D4  2020-24              2              4.17        24D4  4P  0   \n4             D4  2020-24              2              4.28        24D4  4P  0   \n...          ...      ...            ...               ...         ...  .. ..   \n4417          B2  2020-24              3              6.10        24B2  2P  1   \n4418          B2  2020-24              3              6.10        24B2  2P  1   \n4419          B2  2020-24              3              5.47        24B2  2P  1   \n4420          B2  2020-24              3              4.73        24B2  2P  1   \n4421          B2  2020-24              3              4.23        24B2  2P  1   \n\n      H  M  VE  VH  Meal Kits/Crate  \n0     2  3   2   0                4  \n1     2  3   2   0                4  \n2     2  3   2   0                4  \n3     2  3   2   0                4  \n4     2  3   2   0                4  \n...  .. ..  ..  ..              ...  \n4417  1  2   1   2                7  \n4418  1  2   1   2                7  \n4419  1  2   1   2                7  \n4420  1  2   1   2                7  \n4421  1  2   1   2                7  \n\n[4422 rows x 12 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Recipe Name</th>\n      <th>Week</th>\n      <th>Pickers Count</th>\n      <th>Time Consumption</th>\n      <th>Recipe Code</th>\n      <th>P</th>\n      <th>E</th>\n      <th>H</th>\n      <th>M</th>\n      <th>VE</th>\n      <th>VH</th>\n      <th>Meal Kits/Crate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>D4</td>\n      <td>2020-24</td>\n      <td>2</td>\n      <td>4.53</td>\n      <td>24D4</td>\n      <td>4P</td>\n      <td>0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>D4</td>\n      <td>2020-24</td>\n      <td>2</td>\n      <td>4.17</td>\n      <td>24D4</td>\n      <td>4P</td>\n      <td>0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>D4</td>\n      <td>2020-24</td>\n      <td>2</td>\n      <td>7.33</td>\n      <td>24D4</td>\n      <td>4P</td>\n      <td>0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>D4</td>\n      <td>2020-24</td>\n      <td>2</td>\n      <td>4.17</td>\n      <td>24D4</td>\n      <td>4P</td>\n      <td>0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>D4</td>\n      <td>2020-24</td>\n      <td>2</td>\n      <td>4.28</td>\n      <td>24D4</td>\n      <td>4P</td>\n      <td>0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>4417</th>\n      <td>B2</td>\n      <td>2020-24</td>\n      <td>3</td>\n      <td>6.10</td>\n      <td>24B2</td>\n      <td>2P</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>4418</th>\n      <td>B2</td>\n      <td>2020-24</td>\n      <td>3</td>\n      <td>6.10</td>\n      <td>24B2</td>\n      <td>2P</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>4419</th>\n      <td>B2</td>\n      <td>2020-24</td>\n      <td>3</td>\n      <td>5.47</td>\n      <td>24B2</td>\n      <td>2P</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>4420</th>\n      <td>B2</td>\n      <td>2020-24</td>\n      <td>3</td>\n      <td>4.73</td>\n      <td>24B2</td>\n      <td>2P</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>4421</th>\n      <td>B2</td>\n      <td>2020-24</td>\n      <td>3</td>\n      <td>4.23</td>\n      <td>24B2</td>\n      <td>2P</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>7</td>\n    </tr>\n  </tbody>\n</table>\n<p>4422 rows × 12 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "valid_all = klss_staged.merge(recipe_details, how = 'left', left_on = 'Recipe Code', right_on = 'Recipe Code')\n",
+    "valid_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "valid_all "
+    "valid_prepared = valid_all[['Recipe Code', 'Pickers Count', 'Time Consumption', 'P', 'VE', 'E', 'M', 'H', 'VH', 'Meal Kits/Crate']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_prepared.to_csv('valid_all.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
